fix notification z-index

--- a/src/components/common/Layout/Header/ClaimSpfButton/ClaimSpfNotification/ClaimSpfNotification.less
+++ b/src/components/common/Layout/Header/ClaimSpfButton/ClaimSpfNotification/ClaimSpfNotification.less
@@ -1,3 +1,9 @@
+.ant-notification-topRightBackward {
+  top: 64px !important;
+  margin-right: 16px;
+  z-index: 10;
+}
+
 .ant-notification-notice.claim-spf {
   border-radius: 16px;
   height: 300px;
